k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log-management
  labels:
    name: log-management
