k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  namespace: lumina
spec:
  parentRefs:
  - name: frontend-gateway
    namespace: lumina
  hostnames:
  - "frontend.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dev-frontend-svc
      port: 4321
